syntax = "proto3";

package calculator;

option go_package = "github.com/piyushdubey/grpc-go/calculator/proto";

message SumRequest {
    int32 operand1 = 1;
    int32 operand2 = 2;
}

message SumResponse {
    int32 result = 1;
}